# py_segyutil

./: LICENSE  README.md  pyproject.toml
src/py_segyutil/: __init__.py  __main__.py  core.py
src/py_segyutil/headers/: __init__.py  bin_trace_default.py  data_trace_default.py  read_binary.py  read_ebcdic.py  read_single_trace_header.py
src/py_segyutil/main/: __init__.py  segyutil_base.py
src/py_segyutil/trace/: read_segy.py
src/py_segyutil/utils/: __init__.py  byte_adjustment.py  file_check.py  read_format_code.py  segy_param_validation.py  segy_summary.py  trace_locations.py
