[project]
name = "py_segyutil"
version = "0.0.1"
dependencies = ["numpy == 2.4.0",
		"pandas>=2.3.3",
		"importlib==1.0.4"]

[tool.setuptools]
packages = ["py_segyutil"]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]


[tool.setuptools.package-data]
py_segyutil = ["data/*.SEGY"]